bat.bool1.makes10.Makes10.scala.code
def makes10(a:Int, b:Int): Boolean = {
  var c = a + b
  if(c=10){
    return true
  } else if (a=10) {
    return true
  } else if (b=10){
    return true
  } else
  return false
}